--- a/C_Square.vcxproj.filters
+++ b/C_Square.vcxproj.filters
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="src\ofApp.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="src\main.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -190,6 +187,12 @@
     <ClCompile Include="src\squareMgr.cpp">
       <Filter>src\square</Filter>
     </ClCompile>
+    <ClCompile Include="src\ofProjectorApp.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ofViewApp.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -257,9 +260,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\ofApp.h">
-      <Filter>src</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\addons\ofxAnimatable\src\ofxAnimatable.h">
       <Filter>addons\ofxAnimatable\src</Filter>
     </ClInclude>
@@ -481,6 +481,12 @@
     </ClInclude>
     <ClInclude Include="src\squareMgr.h">
       <Filter>src\square</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ofProjectorApp.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ofViewApp.h">
+      <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
