--- a/C_Square.vcxproj
+++ b/C_Square.vcxproj
@@ -171,6 +171,8 @@
     <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\draw\DFlash.cpp" />
+    <ClCompile Include="src\draw\drawer.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\ofProjectorApp.cpp" />
     <ClCompile Include="..\..\..\addons\ofxAnimatable\src\ofxAnimatable.cpp" />
@@ -238,6 +240,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\constParameter.h" />
+    <ClInclude Include="src\draw\DBase.h" />
+    <ClInclude Include="src\draw\DFlash.h" />
+    <ClInclude Include="src\draw\drawer.h" />
+    <ClInclude Include="src\draw\DType.h" />
     <ClInclude Include="src\ofProjectorApp.h" />
     <ClInclude Include="..\..\..\addons\ofxAnimatable\src\ofxAnimatable.h" />
     <ClInclude Include="..\..\..\addons\ofxAnimatable\src\ofxAnimatableFloat.h" />
