--- a/C_Square.vcxproj.filters
+++ b/C_Square.vcxproj.filters
@@ -199,6 +199,9 @@
     <ClCompile Include="src\STest.cpp">
       <Filter>src\scence\SElement</Filter>
     </ClCompile>
+    <ClCompile Include="src\draw\DLife.cpp">
+      <Filter>src\drawer\DElement</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -535,6 +538,9 @@
     </ClInclude>
     <ClInclude Include="src\scence.h">
       <Filter>src\scence</Filter>
+    </ClInclude>
+    <ClInclude Include="src\draw\DLife.h">
+      <Filter>src\drawer\DElement</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
