add DECA element

--- a/C_Square.vcxproj
+++ b/C_Square.vcxproj
@@ -171,6 +171,7 @@
     <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\draw\DECA.cpp" />
     <ClCompile Include="src\draw\DFlash.cpp" />
     <ClCompile Include="src\draw\DLife.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -240,6 +241,7 @@
     <ClCompile Include="src\STest.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\draw\DECA.h" />
     <ClInclude Include="src\draw\DLife.h" />
     <ClInclude Include="src\SBase.h" />
     <ClInclude Include="src\constParameter.h" />
