--- a/C_Square.vcxproj
+++ b/C_Square.vcxproj
@@ -201,6 +201,7 @@
     <ClCompile Include="src\draw\DECA.cpp" />
     <ClCompile Include="src\draw\DFlash.cpp" />
     <ClCompile Include="src\draw\DLife.cpp" />
+    <ClCompile Include="src\draw\DSphareParticle.cpp" />
     <ClCompile Include="src\glitchFilter.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\ofProjectorApp.cpp" />
@@ -299,6 +300,7 @@
     <ClInclude Include="src\draw\DCircleLine.h" />
     <ClInclude Include="src\draw\DECA.h" />
     <ClInclude Include="src\draw\DLife.h" />
+    <ClInclude Include="src\draw\DSphareParticle.h" />
     <ClInclude Include="src\glitchFilter.h" />
     <ClInclude Include="src\SBase.h" />
     <ClInclude Include="src\constParameter.h" />
