--- a/C_Square.vcxproj
+++ b/C_Square.vcxproj
@@ -199,6 +199,7 @@
     <ClCompile Include="..\..\..\addons\ofxPostProcessing\src\ZoomBlurPass.cpp" />
     <ClCompile Include="src\draw\DCircleLine.cpp" />
     <ClCompile Include="src\draw\DCylinderFlow.cpp" />
+    <ClCompile Include="src\draw\DDepthRect.cpp" />
     <ClCompile Include="src\draw\DECA.cpp" />
     <ClCompile Include="src\draw\DFlash.cpp" />
     <ClCompile Include="src\draw\DLife.cpp" />
@@ -303,6 +304,7 @@
     <ClInclude Include="src\draw\DLife.h" />
     <ClInclude Include="src\draw\DSphareParticle.h" />
     <ClInclude Include="src\draw\DCylinderFlow.h" />
+    <ClInclude Include="src\draw\DDepthRect.h" />
     <ClInclude Include="src\glitchFilter.h" />
     <ClInclude Include="src\SBase.h" />
     <ClInclude Include="src\constParameter.h" />
