--- a/C_Square.vcxproj.filters
+++ b/C_Square.vcxproj.filters
@@ -298,6 +298,9 @@
     <ClCompile Include="src\draw\DDepthRect.cpp">
       <Filter>src\drawer\DElement</Filter>
     </ClCompile>
+    <ClCompile Include="src\draw\DStar.cpp">
+      <Filter>src\drawer\DElement</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -750,6 +753,9 @@
       <Filter>src\drawer\DElement</Filter>
     </ClInclude>
     <ClInclude Include="src\draw\DDepthRect.h">
+      <Filter>src\drawer\DElement</Filter>
+    </ClInclude>
+    <ClInclude Include="src\draw\DStar.h">
       <Filter>src\drawer\DElement</Filter>
     </ClInclude>
   </ItemGroup>
