--- a/C_Square.vcxproj
+++ b/C_Square.vcxproj
@@ -204,6 +204,7 @@
     <ClCompile Include="src\draw\DFlash.cpp" />
     <ClCompile Include="src\draw\DLife.cpp" />
     <ClCompile Include="src\draw\DSphareParticle.cpp" />
+    <ClCompile Include="src\draw\DStar.cpp" />
     <ClCompile Include="src\glitchFilter.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\ofProjectorApp.cpp" />
@@ -305,6 +306,7 @@
     <ClInclude Include="src\draw\DSphareParticle.h" />
     <ClInclude Include="src\draw\DCylinderFlow.h" />
     <ClInclude Include="src\draw\DDepthRect.h" />
+    <ClInclude Include="src\draw\DStar.h" />
     <ClInclude Include="src\glitchFilter.h" />
     <ClInclude Include="src\SBase.h" />
     <ClInclude Include="src\constParameter.h" />
