--- a/C_Square.vcxproj
+++ b/C_Square.vcxproj
@@ -204,6 +204,7 @@
     <ClCompile Include="src\draw\DFlash.cpp" />
     <ClCompile Include="src\draw\DLife.cpp" />
     <ClCompile Include="src\draw\DMetaball3D.cpp" />
+    <ClCompile Include="src\draw\DPingPong.cpp" />
     <ClCompile Include="src\draw\DSphareParticle.cpp" />
     <ClCompile Include="src\draw\DStar.cpp" />
     <ClCompile Include="src\glitchFilter.cpp" />
@@ -306,6 +307,7 @@
     <ClInclude Include="src\draw\DECA.h" />
     <ClInclude Include="src\draw\DLife.h" />
     <ClInclude Include="src\draw\DMetaball3D.h" />
+    <ClInclude Include="src\draw\DPingPong.h" />
     <ClInclude Include="src\draw\DSphareParticle.h" />
     <ClInclude Include="src\draw\DCylinderFlow.h" />
     <ClInclude Include="src\draw\DDepthRect.h" />
