--- a/C_Square.vcxproj
+++ b/C_Square.vcxproj
@@ -203,6 +203,7 @@
     <ClCompile Include="src\draw\DECA.cpp" />
     <ClCompile Include="src\draw\DFlash.cpp" />
     <ClCompile Include="src\draw\DLife.cpp" />
+    <ClCompile Include="src\draw\DMandelbrotSet.cpp" />
     <ClCompile Include="src\draw\DMetaball3D.cpp" />
     <ClCompile Include="src\draw\DPingPong.cpp" />
     <ClCompile Include="src\draw\DSphareParticle.cpp" />
@@ -306,6 +307,7 @@
     <ClInclude Include="src\draw\DCircleLine.h" />
     <ClInclude Include="src\draw\DECA.h" />
     <ClInclude Include="src\draw\DLife.h" />
+    <ClInclude Include="src\draw\DMandelbrotSet.h" />
     <ClInclude Include="src\draw\DMetaball3D.h" />
     <ClInclude Include="src\draw\DPingPong.h" />
     <ClInclude Include="src\draw\DSphareParticle.h" />
