--- a/C_Square.vcxproj.filters
+++ b/C_Square.vcxproj.filters
@@ -313,6 +313,9 @@
     <ClCompile Include="src\draw\DMandelbrotSet.cpp">
       <Filter>src\drawer\DElement</Filter>
     </ClCompile>
+    <ClCompile Include="src\draw\DJuliaSet.cpp">
+      <Filter>src\drawer\DElement</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -786,6 +789,9 @@
       <Filter>src\drawer\DElement</Filter>
     </ClInclude>
     <ClInclude Include="src\draw\DMandelbrotSet.h">
+      <Filter>src\drawer\DElement</Filter>
+    </ClInclude>
+    <ClInclude Include="src\draw\DJuliaSet.h">
       <Filter>src\drawer\DElement</Filter>
     </ClInclude>
   </ItemGroup>
